--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,4 @@
+import(jaspBase)
 export(mlRegressionBoosting)
 export(mlRegressionKnn)
 export(mlRegressionRandomForest)
@@ -11,14 +12,3 @@ export(mlClusteringFuzzyCMeans)
 export(mlClusteringHierarchical)
 export(mlClusteringKMeans)
 export(mlClusteringRandomForest)
-  import('AUC');
-  import('cluster');
-  import('colorspace');
-  import('dbscan');
-  import('e1071');
-  import('gbm');
-  import('ggdendro');
-  import('kknn');
-  import('randomForest');
-  import('ROCR');
-  import('Rtsne');
