Predictions for classification

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,3 +12,4 @@ export(mlClusteringFuzzyCMeans)
 export(mlClusteringHierarchical)
 export(mlClusteringKMeans)
 export(mlClusteringRandomForest)
+export(mlPrediction)
