Setup to save supervised models and apply them to new data (#10)
* Predictions for classification

* Predictions for regression

* Add n.new to summary table and add exclude.na.listwise

* Add S3 methods to prediction

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,20 @@
 import(jaspBase)
+S3method(.mlPredictionGetModelType,lda)
+S3method(.mlPredictionGetModelType,gbm)
+S3method(.mlPredictionGetModelType,randomForest)
+S3method(.mlPredictionGetModelType,cv.glmnet)
+S3method(.mlPredictionGetModelVars,lda)
+S3method(.mlPredictionGetModelVars,gbm)
+S3method(.mlPredictionGetModelVars,randomForest)
+S3method(.mlPredictionGetModelVars,cv.glmnet)
+S3method(.mlPredictionGetPredictions,lda)
+S3method(.mlPredictionGetPredictions,gbm)
+S3method(.mlPredictionGetPredictions,randomForest)
+S3method(.mlPredictionGetPredictions,cv.glmnet)
+S3method(.mlPredictionGetTrainingN,lda)
+S3method(.mlPredictionGetTrainingN,gbm)
+S3method(.mlPredictionGetTrainingN,randomForest)
+S3method(.mlPredictionGetTrainingN,cv.glmnet)
 export(mlRegressionBoosting)
 export(mlRegressionKnn)
 export(mlRegressionRandomForest)
@@ -12,3 +28,4 @@ export(mlClusteringFuzzyCMeans)
 export(mlClusteringHierarchical)
 export(mlClusteringKMeans)
 export(mlClusteringRandomForest)
+export(mlPrediction)
