--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,12 +20,15 @@ Imports:
   fpc,
   gbm,
   ggdendro,
+  ggnetwork,
   ggplot2,
   ggrepel,
   glmnet,
   jaspBase,
   jaspGraphs,
   MASS,
+  neuralnet,
+  network,
   plyr,
   randomForest,
   ROCR,
