--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,11 +1,13 @@
 import(jaspBase)
 export(mlRegressionBoosting)
 export(mlRegressionKnn)
+export(mlRegressionNeuralNetwork)
 export(mlRegressionRandomForest)
 export(mlRegressionRegularized)
 export(mlClassificationBoosting)
 export(mlClassificationKnn)
 export(mlClassificationLda)
+export(mlClassificationNeuralNetwork)
 export(mlClassificationRandomForest)
 export(mlClusteringDensityBased)
 export(mlClusteringFuzzyCMeans)
