--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,18 +3,17 @@ S3method(.mlPredictionGetModelType,lda)
 S3method(.mlPredictionGetModelType,gbm)
 S3method(.mlPredictionGetModelType,randomForest)
 S3method(.mlPredictionGetModelType,cv.glmnet)
-S3method(.mlPredictionGetModelVars,lda)
-S3method(.mlPredictionGetModelVars,gbm)
-S3method(.mlPredictionGetModelVars,randomForest)
-S3method(.mlPredictionGetModelVars,cv.glmnet)
+S3method(.mlPredictionGetModelType,nn)
 S3method(.mlPredictionGetPredictions,lda)
 S3method(.mlPredictionGetPredictions,gbm)
 S3method(.mlPredictionGetPredictions,randomForest)
 S3method(.mlPredictionGetPredictions,cv.glmnet)
+S3method(.mlPredictionGetPredictions,nn)
 S3method(.mlPredictionGetTrainingN,lda)
 S3method(.mlPredictionGetTrainingN,gbm)
 S3method(.mlPredictionGetTrainingN,randomForest)
 S3method(.mlPredictionGetTrainingN,cv.glmnet)
+S3method(.mlPredictionGetTrainingN,nn)
 export(mlRegressionBoosting)
 export(mlRegressionKnn)
 export(mlRegressionNeuralNetwork)
