--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,9 @@
 import(jaspBase)
+S3method(.decodeJaspMLobject,lda)
+S3method(.decodeJaspMLobject,gbm)
+S3method(.decodeJaspMLobject,randomForest)
+S3method(.decodeJaspMLobject,cv.glmnet)
+S3method(.decodeJaspMLobject,nn)
 S3method(.mlPredictionGetModelType,lda)
 S3method(.mlPredictionGetModelType,gbm)
 S3method(.mlPredictionGetModelType,randomForest)
