--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,24 @@
 import(jaspBase)
+S3method(.decodeJaspMLobject,lda)
+S3method(.decodeJaspMLobject,gbm)
+S3method(.decodeJaspMLobject,randomForest)
+S3method(.decodeJaspMLobject,cv.glmnet)
+S3method(.decodeJaspMLobject,nn)
+S3method(.mlPredictionGetModelType,lda)
+S3method(.mlPredictionGetModelType,gbm)
+S3method(.mlPredictionGetModelType,randomForest)
+S3method(.mlPredictionGetModelType,cv.glmnet)
+S3method(.mlPredictionGetModelType,nn)
+S3method(.mlPredictionGetPredictions,lda)
+S3method(.mlPredictionGetPredictions,gbm)
+S3method(.mlPredictionGetPredictions,randomForest)
+S3method(.mlPredictionGetPredictions,cv.glmnet)
+S3method(.mlPredictionGetPredictions,nn)
+S3method(.mlPredictionGetTrainingN,lda)
+S3method(.mlPredictionGetTrainingN,gbm)
+S3method(.mlPredictionGetTrainingN,randomForest)
+S3method(.mlPredictionGetTrainingN,cv.glmnet)
+S3method(.mlPredictionGetTrainingN,nn)
 export(mlRegressionBoosting)
 export(mlRegressionKnn)
 export(mlRegressionNeuralNetwork)
@@ -14,3 +34,4 @@ export(mlClusteringFuzzyCMeans)
 export(mlClusteringHierarchical)
 export(mlClusteringKMeans)
 export(mlClusteringRandomForest)
+export(mlPrediction)
