Style all files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,19 +1,23 @@
 import(jaspBase)
+S3method(.decodeJaspMLobject,kknn)
 S3method(.decodeJaspMLobject,lda)
 S3method(.decodeJaspMLobject,gbm)
 S3method(.decodeJaspMLobject,randomForest)
 S3method(.decodeJaspMLobject,cv.glmnet)
 S3method(.decodeJaspMLobject,nn)
+S3method(.mlPredictionGetModelType,kknn)
 S3method(.mlPredictionGetModelType,lda)
 S3method(.mlPredictionGetModelType,gbm)
 S3method(.mlPredictionGetModelType,randomForest)
 S3method(.mlPredictionGetModelType,cv.glmnet)
 S3method(.mlPredictionGetModelType,nn)
+S3method(.mlPredictionGetPredictions,kknn)
 S3method(.mlPredictionGetPredictions,lda)
 S3method(.mlPredictionGetPredictions,gbm)
 S3method(.mlPredictionGetPredictions,randomForest)
 S3method(.mlPredictionGetPredictions,cv.glmnet)
 S3method(.mlPredictionGetPredictions,nn)
+S3method(.mlPredictionGetTrainingN,kknn)
 S3method(.mlPredictionGetTrainingN,lda)
 S3method(.mlPredictionGetTrainingN,gbm)
 S3method(.mlPredictionGetTrainingN,randomForest)
