Decision trees + support vector machines + k-medoids

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,37 +5,51 @@ S3method(.decodeJaspMLobject,gbm)
 S3method(.decodeJaspMLobject,randomForest)
 S3method(.decodeJaspMLobject,cv.glmnet)
 S3method(.decodeJaspMLobject,nn)
+S3method(.decodeJaspMLobject,rpart)
+S3method(.decodeJaspMLobject,svm)
 S3method(.mlPredictionGetModelType,kknn)
 S3method(.mlPredictionGetModelType,lda)
 S3method(.mlPredictionGetModelType,gbm)
 S3method(.mlPredictionGetModelType,randomForest)
 S3method(.mlPredictionGetModelType,cv.glmnet)
 S3method(.mlPredictionGetModelType,nn)
+S3method(.mlPredictionGetModelType,rpart)
+S3method(.mlPredictionGetModelType,svm)
 S3method(.mlPredictionGetPredictions,kknn)
 S3method(.mlPredictionGetPredictions,lda)
 S3method(.mlPredictionGetPredictions,gbm)
 S3method(.mlPredictionGetPredictions,randomForest)
 S3method(.mlPredictionGetPredictions,cv.glmnet)
 S3method(.mlPredictionGetPredictions,nn)
+S3method(.mlPredictionGetPredictions,rpart)
+S3method(.mlPredictionGetPredictions,svm)
 S3method(.mlPredictionGetTrainingN,kknn)
 S3method(.mlPredictionGetTrainingN,lda)
 S3method(.mlPredictionGetTrainingN,gbm)
 S3method(.mlPredictionGetTrainingN,randomForest)
 S3method(.mlPredictionGetTrainingN,cv.glmnet)
 S3method(.mlPredictionGetTrainingN,nn)
+S3method(.mlPredictionGetTrainingN,rpart)
+S3method(.mlPredictionGetTrainingN,svm)
 export(mlRegressionBoosting)
+export(mlRegressionDecisionTree)
 export(mlRegressionKnn)
 export(mlRegressionNeuralNetwork)
 export(mlRegressionRandomForest)
 export(mlRegressionRegularized)
+export(mlRegressionSvm)
 export(mlClassificationBoosting)
+export(mlClassificationDecisionTree)
 export(mlClassificationKnn)
 export(mlClassificationLda)
 export(mlClassificationNeuralNetwork)
 export(mlClassificationRandomForest)
+export(mlClassificationSvm)
 export(mlClusteringDensityBased)
 export(mlClusteringFuzzyCMeans)
 export(mlClusteringHierarchical)
 export(mlClusteringKMeans)
+export(mlClusteringKMedians)
+export(mlClusteringKMedoids)
 export(mlClusteringRandomForest)
 export(mlPrediction)
