--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: jaspMachineLearning
 Type: Package
 Title: Machine Learning Module for JASP
-Version: 0.16
-Date: 2021-09-30
+Version: 0.16.1
+Date: 2021-11-04
 Author: JASP Team
 Website: www.jasp-stats.org
 Maintainer: JASP Team <info@jasp-stats.org>
@@ -19,6 +19,8 @@ Imports:
   e1071,
   fpc,
   gbm,
+  Gmedian,
+  ggparty,
   ggdendro,
   ggnetwork,
   ggplot2,
@@ -29,8 +31,10 @@ Imports:
   MASS,
   neuralnet,
   network,
+  partykit,
   plyr,
   randomForest,
+  rpart,
   ROCR,
   Rtsne,
   signal
