Decision trees + Support vector machines + K-medoids + K-medians + more (#82)
* Decision trees + support vector machines + k-medoids

* Correct number of in decimals in Decision Tree Plot

* Add cp parameter as an option

* Add degree, gamma, and coef0 parameters to svm

* Merge k-means, k-medians, k-medoids into neighbordhood based clustering

* Add group into one figure for cluster densities

* Update commonMachineLearningClustering.R

* Add support vectors to decision boundary plot

* Implement feedback and bug fixes

* Fix issue with missing class in training data

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: jaspMachineLearning
 Type: Package
 Title: Machine Learning Module for JASP
-Version: 0.16
-Date: 2021-09-30
+Version: 0.16.1
+Date: 2021-11-04
 Author: JASP Team
 Website: www.jasp-stats.org
 Maintainer: JASP Team <info@jasp-stats.org>
@@ -19,18 +19,23 @@ Imports:
   e1071,
   fpc,
   gbm,
+  Gmedian,
+  ggparty,
   ggdendro,
   ggnetwork,
   ggplot2,
   ggrepel,
+  ggridges,
   glmnet,
   jaspBase,
   jaspGraphs,
   MASS,
   neuralnet,
   network,
+  partykit,
   plyr,
   randomForest,
+  rpart,
   ROCR,
   Rtsne,
   signal
