Manually install rpart for unit tests

--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -36,6 +36,9 @@ jobs:
         run: install.packages("igraph", type = "source", repos = "https://cloud.r-project.org/")
         shell: Rscript {0}
 
+      - name: Make sure rpart is installed from source
+        run: install.packages("rpart", type = "source", repos = "https://cloud.r-project.org/")
+        shell: Rscript {0}
 
       - name: Run unit tests
         run: source("tests/testthat.R")
