fix contr.dummy and contr.ordinal

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,3 +51,5 @@ export(mlClusteringHierarchical)
 export(mlClusteringKMeans)
 export(mlClusteringRandomForest)
 export(mlPrediction)
+export(contr.dummy)
+export(contr.ordinal)
