Isolation forest first try

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ export(mlClusteringDensityBased)
 export(mlClusteringFuzzyCMeans)
 export(mlClusteringHierarchical)
 export(mlClusteringModelBased)
+export(mlClusteringIsolationForest)
 export(mlClusteringKMeans)
 export(mlClusteringRandomForest)
 export(mlPrediction)
