--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,8 +24,8 @@ Imports:
   ggparty,
   ggdendro,
   ggnetwork,
-  ggplot2,
-  ggrepel,
+  ggplot2 (>= 3.4.2),
+  ggrepel (>= 0.9.3),
   ggridges,
   glmnet,
   jaspBase,
