--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,9 @@ S3method(.mlPredictionGetTrainingN,nn)
 S3method(.mlPredictionGetTrainingN,rpart)
 S3method(.mlPredictionGetTrainingN,svm)
 S3method(.mlPredictionGetTrainingN,naiveBayes)
+export(mlAnomalyIsolationForest)
+export(mlAnomalyOutlierTree)
+export(mlAnomalySvm)
 export(mlRegressionBoosting)
 export(mlRegressionDecisionTree)
 export(mlRegressionKnn)
