Add a bare bones linear regression analysis

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,6 +1,7 @@
 import(jaspBase)
 S3method(.decodeJaspMLobject,kknn)
 S3method(.decodeJaspMLobject,lda)
+S3method(.decodeJaspMLobject,lm)
 S3method(.decodeJaspMLobject,gbm)
 S3method(.decodeJaspMLobject,randomForest)
 S3method(.decodeJaspMLobject,cv.glmnet)
@@ -9,6 +10,7 @@ S3method(.decodeJaspMLobject,rpart)
 S3method(.decodeJaspMLobject,svm)
 S3method(.mlPredictionGetModelType,kknn)
 S3method(.mlPredictionGetModelType,lda)
+S3method(.mlPredictionGetModelType,lm)
 S3method(.mlPredictionGetModelType,gbm)
 S3method(.mlPredictionGetModelType,randomForest)
 S3method(.mlPredictionGetModelType,cv.glmnet)
@@ -16,6 +18,7 @@ S3method(.mlPredictionGetModelType,nn)
 S3method(.mlPredictionGetModelType,rpart)
 S3method(.mlPredictionGetModelType,svm)
 S3method(.mlPredictionGetPredictions,kknn)
+S3method(.mlPredictionGetPredictions,lm)
 S3method(.mlPredictionGetPredictions,lda)
 S3method(.mlPredictionGetPredictions,gbm)
 S3method(.mlPredictionGetPredictions,randomForest)
@@ -24,6 +27,7 @@ S3method(.mlPredictionGetPredictions,nn)
 S3method(.mlPredictionGetPredictions,rpart)
 S3method(.mlPredictionGetPredictions,svm)
 S3method(.mlPredictionGetTrainingN,kknn)
+S3method(.mlPredictionGetTrainingN,lm)
 S3method(.mlPredictionGetTrainingN,lda)
 S3method(.mlPredictionGetTrainingN,gbm)
 S3method(.mlPredictionGetTrainingN,randomForest)
@@ -34,6 +38,7 @@ S3method(.mlPredictionGetTrainingN,svm)
 export(mlRegressionBoosting)
 export(mlRegressionDecisionTree)
 export(mlRegressionKnn)
+export(mlRegressionLinear)
 export(mlRegressionNeuralNetwork)
 export(mlRegressionRandomForest)
 export(mlRegressionRegularized)
