First implementation of naive Bayes classification

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method(.decodeJaspMLobject,cv.glmnet)
 S3method(.decodeJaspMLobject,nn)
 S3method(.decodeJaspMLobject,rpart)
 S3method(.decodeJaspMLobject,svm)
+S3method(.decodeJaspMLobject,naiveBayes)
 S3method(.mlPredictionGetModelType,kknn)
 S3method(.mlPredictionGetModelType,lda)
 S3method(.mlPredictionGetModelType,lm)
@@ -17,6 +18,7 @@ S3method(.mlPredictionGetModelType,cv.glmnet)
 S3method(.mlPredictionGetModelType,nn)
 S3method(.mlPredictionGetModelType,rpart)
 S3method(.mlPredictionGetModelType,svm)
+S3method(.mlPredictionGetModelType,naiveBayes)
 S3method(.mlPredictionGetPredictions,kknn)
 S3method(.mlPredictionGetPredictions,lm)
 S3method(.mlPredictionGetPredictions,lda)
@@ -26,6 +28,7 @@ S3method(.mlPredictionGetPredictions,cv.glmnet)
 S3method(.mlPredictionGetPredictions,nn)
 S3method(.mlPredictionGetPredictions,rpart)
 S3method(.mlPredictionGetPredictions,svm)
+S3method(.mlPredictionGetPredictions,naiveBayes)
 S3method(.mlPredictionGetTrainingN,kknn)
 S3method(.mlPredictionGetTrainingN,lm)
 S3method(.mlPredictionGetTrainingN,lda)
@@ -35,6 +38,7 @@ S3method(.mlPredictionGetTrainingN,cv.glmnet)
 S3method(.mlPredictionGetTrainingN,nn)
 S3method(.mlPredictionGetTrainingN,rpart)
 S3method(.mlPredictionGetTrainingN,svm)
+S3method(.mlPredictionGetTrainingN,naiveBayes)
 export(mlRegressionBoosting)
 export(mlRegressionDecisionTree)
 export(mlRegressionKnn)
@@ -47,6 +51,7 @@ export(mlClassificationBoosting)
 export(mlClassificationDecisionTree)
 export(mlClassificationKnn)
 export(mlClassificationLda)
+export(mlClassificationNaiveBayes)
 export(mlClassificationNeuralNetwork)
 export(mlClassificationRandomForest)
 export(mlClassificationSvm)
