Add model-based clustering

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,6 +58,7 @@ export(mlClassificationSvm)
 export(mlClusteringDensityBased)
 export(mlClusteringFuzzyCMeans)
 export(mlClusteringHierarchical)
+export(mlClusteringModelBased)
 export(mlClusteringKMeans)
 export(mlClusteringRandomForest)
 export(mlPrediction)
