--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,7 @@ export(mlClassificationBoosting)
 export(mlClassificationDecisionTree)
 export(mlClassificationKnn)
 export(mlClassificationLda)
+export(mlClassificationLogistic)
 export(mlClassificationNaiveBayes)
 export(mlClassificationNeuralNetwork)
 export(mlClassificationRandomForest)
