Logistic / Multinomial regression (#369)
* First implementation

* Update mlClassificationLogistic.R

* Add intercept option

* Add coefficients table for logistic

* Update

* Change file names

* Update mlClassificationLogisticMultinomial.R

* Update coef table

* Make AUC work

* Make roc plot work

* Make decision boundary work

* Start with prediction

* Prediction for logit regression

* Predictions for multinomial

* Formula for multinomial

* Update table content

* explainers

* Update mlClassificationLogisticMultinomial.R

* Update test-mlclassificationlogisticmultinomial.R

* Add info text

* Update

* Update mlClassificationLogisticMultinomial.R

* coef table for multinomial

* Add test for logistic

* Support different link functions

* Change decode method

* Complementary log log

* Fix little bug in regularized linear regression where intercept was incorrectly shown in equation

* Ensure first "+" is not shown if there is no intercept

* Fix bug for single variable logistic without intercept

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,7 @@ export(mlClassificationBoosting)
 export(mlClassificationDecisionTree)
 export(mlClassificationKnn)
 export(mlClassificationLda)
+export(mlClassificationLogisticMultinomial)
 export(mlClassificationNaiveBayes)
 export(mlClassificationNeuralNetwork)
 export(mlClassificationRandomForest)
