--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ Description: Explore the relation between variables using data-driven methods fo
 License: GPL (>= 2)
 Encoding: UTF-8
 Depends:
-  kknn
+  kknn (>= 1.4.1)
 Imports:
   AUC,
   cluster,
